[metadata]
name = pyproxypattern
version = 0.0.0
url = https://github.com/Python-Tools/pyproxypattern
author = hsz
author_email = hsz1273327@gmail.com
description = My package description
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = proxy
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    aredis >= 1.0.0
    structlog >= 20.0.0
    peewee_async >= 0.7.0

[options.packages.find]
include = pyproxy
exclude = tests
